[workspace]
resolver = "3"
members = ["beat", "common", "cue", "event", "mem", "protocol", "local"]

[workspace.lints.clippy]
branches_sharing_code = "warn"
derive_partial_eq_without_eq = "warn"
needless_pass_by_ref_mut = "warn"
option_if_let_else = "warn"
redundant_clone = "warn"
suspicious_operation_groupings = "warn"
unnecessary_struct_initialization = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
arbitrary_source_item_ordering = "warn"
arithmetic_side_effects = "warn"
decimal_literal_representation = "warn"
std_instead_of_core = "warn"
todo = "warn"
