[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
cue = { path = "../cue" }
beat = { path = "../beat" }
protocol = { path = "../protocol" }
mem = { path = "../mem" }
event = { path = "../event" }
local = { path = "../local" }

[features]
std = ["cue/std"]
serde = ["mem/serde"]
