[package]
name = "control"
version = "0.1.0"
edition = "2024"

[dependencies]
mem = { path = "../mem" }
beat = { path = "../beat" }
cue = { path = "../cue" }
event = { path = "../event" }
config = { path = "../config" }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
bitflags = { version = "2.10.0", features = ["serde"] }
