[package]
name = "event"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["derive"] }
mem = { path = "../mem" }
tiny_sort = "1.0.5"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }

[features]
serde = ["dep:serde", "dep:serde_json", "std"]
std = []
