[package]
name = "local"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
beat = { path = "../beat" }
event = { path = "../event" }
cue = { path = "../cue" }
mem = { path = "../mem" }
bitflags = { version = "2.10.0", features = ["serde"] }

[features]
serde = []
