[package]
name = "mem"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.10.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["serde_derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }

[features]
serde = ["dep:serde", "dep:serde_json"]
