[package]
name = "notification"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.10.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
beat = { path = "../beat" }
event = { path = "../event" }
cue = { path = "../cue" }
time = { path = "../time" }
config = { path = "../config" }
mem = { path = "../mem" }
