[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["serde_derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
beat = { path = "../beat" }
event = { path = "../event" }
cue = { path = "../cue" }
mem = { path = "../mem" }
local = { path = "../local" }
bitflags = { version = "2.10.0", features = ["serde"] }

[features]
serde = ["dep:serde", "dep:serde_json"]
